# ML25_MD_2025

./: .gitattributes  .gitignore  Prueba_HolaMundo.py  README.md  pyproject.toml
E02/: Intro_a_jupyter_notebook_Dania.ipynb  Intro_a_jupyter_notebook_Mariana.ipynb  Intro_a_numpy_Dania.ipynb  Intro_a_numpy_Mariana.ipynb
mlenv/: pyvenv.cfg
mlenv/Scripts/: activate  activate.bat
src/ml15/E00_rl/: q_learning.py
src/ml15/E02_intro/: Intro_a_jupyter_notebook.ipynb
src/ml25/E00_rl/: q_learning.py  q_learning_Mariana.py  q_learning_sol.py
src/ml25/E02_intro/: Intro_a_jupyter_notebook.ipynb  Intro_a_jupyter_notebook_Dania.ipynb  Intro_a_jupyter_notebook_Mariana.ipynb  Intro_a_numpy_Dania.ipynb  Intro_a_numpy_Mariana.ipynb
src/ml25/E03_linear_reg/: gradient_descent.ipynb  linear_regression.ipynb
src/ml25/E04_logistic_reg/: logistic_regression.ipynb  logistic_regression_sol.ipynb
src/ml25/E05_unsupervised/: clustering.ipynb  dim_reduction.ipynb  dim_reduction_sol.ipynb
src/ml25/E06_mlp_class/: mlp_class.ipynb  mlp_class_sol.ipynb
src/ml25/E07_mlp_reg/: mlp_reg.ipynb
src/ml25/E08_mlp_reg/: mlp_reg.ipynb  mlp_reg_sol.ipynb
src/ml25/E09_cnn_class/: cnn_classifier.ipynb  cnn_classifier_sol.ipynb
src/ml25/P01_avance/: Analisis_exploratorio.ipynb  Avance Dania.ipynb  README.md  analyze_experiment.ipynb  check_feature_importance.py  compare_experiments.ipynb  data_processing.py  diagnostic.py  experiment_GradientBoosting_Experiment_20251008_104553.json  find_optimal_treshold.py  inference.py  inference_XGBoost.py  inference_rf.py  inference_xgb.py  model.ipynb  (+22 more)
(+136 files in other folders)
